# configforge

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
examples/: audited_free_apis.json  base.json  cb.json  check_png.py  co.json  live_config_example.py  make_demo.py  override.json  render_architecture.py  render_terminal.py  save_kroki_png.py  schema.json  svg_to_png.py
hyperframes/: index.html  terminal.html
src/configforge/: __init__.py  cli.py
tests/: test_core.py
